--- a/threshold_tuner.ipynb
+++ b/threshold_tuner.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8nDAJTuSIp1m9uSXjKl70",
+      "authorship_tag": "ABX9TyN5oPs15sTyWjMHX5ML0U6r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,24 +147,20 @@
         "############ DATA IMPORT\n",
         "\n",
         "## available datasets\n",
-        "# bene1         # some \n",
         "\n",
-        "    # OK gmsc          # shape:  (150000, 68)\n",
-        "    # OK uk            # very low bad rate, shape:  (30000, 51), y mean:  0.04\n",
-        "    # OK lendingclub   # loooow performance, X shape:  (41623, 114) y shape:  (41623,) y mean:  0.1331235134420873    \n",
-        "    \n",
-        "    # OK bene2         # some learning, shape:  (7190, 28) >> 3 folds NO WASTE\n",
-        "    \n",
-        "    # bene1_nobins  # shape:  (3123, 18) # 5 folds NO WASTE\n",
-        "        # hmeq          # not promising either, shape:  (5960, 20) # 5 folds NO WASTE\n",
-        "        # australian    # very small dataset shape:  (690, 42) >> 10 folds NO WASTE\n",
-        "        # german        # shape:  (1000, 61) >> 10 folds NO WASTE\n",
-        "        # thomas        # loooow performance shape:  (1225, 28) >> 10 folds NO WASTE\n",
-        "\n",
-        "# pakdd         # shape:  (50000, 373), y mean:  0.26082\n",
+        "  # OK gmsc          # shape:  (150000, 68)\n",
+        "  # OK uk            # shape:  (30000, 51), y mean:  0.04\n",
+        "  # OK lendingclub   # shape:  (41623, 114) y mean:  0.1331235134420873    \n",
+        "  # OK bene2         # shape:  (7190, 28)\n",
+        "  # bene1            # shape:  (3123, 18)\n",
+        "  # hmeq             # shape:  (5960, 20)\n",
+        "  # australian       # shape:  (690, 42)\n",
+        "  # german           # shape:  (1000, 61)\n",
+        "  # thomas           # shape:  (1225, 28)\n",
+        "  # pakdd            # shape:  (50000, 373), y mean:  0.26082\n",
         "\n",
         "data_name = \"australian\"\n",
-        "dataset_list = [\"bene2\", \"bene1_nobins\",\"gmsc\", \"uk\", \"lendingclub\", \"hmeq\", \"australian\", \"german\", \"thomas\", \"pakdd\"]\n",
+        "dataset_list = [\"bene2\", \"bene1\",\"gmsc\", \"uk\", \"lendingclub\", \"hmeq\", \"australian\", \"german\", \"thomas\", \"pakdd\"]\n",
         "\n",
         "def data_loader(dataset):\n",
         "\n",
@@ -694,15 +690,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mcn2ttfrXgEr",
-        "outputId": "750e7f16-60fb-48da-ddc9-26201d66696d"
+        "outputId": "c3480147-389a-4d76-fdf6-d05fd7836af3"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'bene2': 0.283, 'bene1_nobins': 0.372, 'gmsc': 0.057, 'uk': 0.039, 'lendingclub': 0.136, 'hmeq': 0.208, 'australian': 0.333, 'german': 0.336, 'thomas': 0.357, 'pakdd': 0.244}\n"
+            "{'bene2': 0.283, 'gmsc': 0.057, 'uk': 0.039, 'lendingclub': 0.137, 'hmeq': 0.208, 'australian': 0.523, 'german': 0.307, 'thomas': 0.31, 'pakdd': 0.244, 'bene1': 0.372}\n"
           ]
         }
       ]
