--- a/AL_CreditScoring.ipynb
+++ b/AL_CreditScoring.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "1G7lnfTo-J7t"
       },
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "9clhtuie-zY6"
       },
@@ -216,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "SwT100xf-J7u"
       },
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "4hTm9ni8CnhY"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "a9qj2-Zl-J7v"
       },
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "Ag_qAThO2orW"
       },
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "gOY7hOQXzu2h"
       },
@@ -356,7 +356,7 @@
         "  test_idx = indices_dict['test_idx']\n",
         "  confusion_mat = confusion_matrix(y_true[test_idx], prediction)\n",
         "\n",
-        "  ext_cost = np.sum(cost_matrix * confusion_mat)\n",
+        "  ext_cost = np.sum(cost_matrix * confusion_mat) #dot wise product\n",
         "  cost_dict['external_cost'].loc[cost_dict['generation'] == gen] = ext_cost\n",
         "\n",
         "  # ---------------- external cost per loan (eCPL)\n",
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "LeGu98mZkqt_"
       },
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "SSGEqP_YYCOu"
       },
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "KvGBeAPboDIF"
       },
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "Iy2fFs8sGn6Q"
       },
@@ -597,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "s2hCEon2GFlS"
       },
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "5vaGz5qTG2DH"
       },
@@ -811,7 +811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "BHd-N3ERZj_1"
       },
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "ASsoGHrjnzav"
       },
@@ -1361,7 +1361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "VsXIteojiXiU"
       },
@@ -1398,7 +1398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6466,11 +6466,6 @@
         "    spal=['SPAL','QueryInstanceSPAL'] #only if cvxpy installed\n",
         "    )\n",
         "\n",
-        "'''AL_models = dict(\n",
-        "    bmdr=['BMDR','QueryInstanceBMDR'], #only if cvxpy installed\n",
-        "    spal=['SPAL','QueryInstanceSPAL'] #only if cvxpy installed\n",
-        "    )'''\n",
-        "\n",
         "#store different filenames after each run, making loading of results easier\n",
         "filename_list=[]\n",
         "\n",
@@ -6525,7 +6520,7 @@
         "        LOOP_params = loop_param_setter(X, max_gens=max_gens, total_rounds=rounds, AL_acc_rate=r_AL, cost_mat=cost_mat, dataset=dataset, weights=wght)\n",
         "\n",
         "        ### Build filename for saving results\n",
-        "        filename = \"TEST_{}_\".format(dataset)\n",
+        "        filename = \"{}_\".format(dataset)\n",
         "\n",
         "        for key in LOOP_params:\n",
         "          if key not in [\"init_sample\", \"sample_size\", \"score_acc_rate\", \"w_factor\", \"tuned_threshold\", \"dataset_name\"]:\n",
@@ -6577,17 +6572,17 @@
         "          AL_stats[\"{}\".format(key)]['average'] = pd.concat(AL_stats[\"{}\".format(key)]).groupby(level=1).mean()\n",
         "          AL_cost[\"{}\".format(key)]['average'] = pd.concat(AL_cost[\"{}\".format(key)]).groupby(level=1).mean()\n",
         "\n",
-        "          with open(f'TEST_model_results/{dataset}/{filename}', 'wb') as a_file:\n",
+        "          with open(f'model_results/{dataset}/{filename}', 'wb') as a_file:\n",
         "            pickle.dump(AL_stats, a_file)\n",
         "\n",
-        "          with open(f'TEST_model_cost/{dataset}/{filename}', 'wb') as b_file:\n",
+        "          with open(f'model_cost/{dataset}/{filename}', 'wb') as b_file:\n",
         "            pickle.dump(AL_cost, b_file)\n",
         "          \n",
         "          a_file.close()\n",
         "          b_file.close()\n",
         "\n",
         "          if store_indices == True:\n",
-        "            with open(f'TEST_model_indices/{dataset}/{filename}', 'wb') as c_file:\n",
+        "            with open(f'model_indices/{dataset}/{filename}', 'wb') as c_file:\n",
         "              pickle.dump(AL_indices, c_file)\n",
         "            c_file.close()\n",
         "\n",
@@ -6624,7 +6619,7 @@
     "colab": {
       "collapsed_sections": [
         "eP-kbRQHWTbB",
-        "u-kViyqDgoSA"
+        "uB4IsIfEhApo"
       ],
       "name": "AL_CreditScoring.ipynb",
       "provenance": [],
