--- a/AL_CreditScoring.ipynb
+++ b/AL_CreditScoring.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gNnbXTVF-blo",
-        "outputId": "ffd1a408-0bac-4446-ea86-6338de881554"
+        "outputId": "c90e7545-ab8d-4ae6-aa4b-c7081f2a0da8"
       },
       "outputs": [
         {
@@ -56,69 +56,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "id": "appqqcKF-J7n",
-        "outputId": "7ac4dff9-7d11-4e15-ff06-a1a78aef4dde"
+        "id": "appqqcKF-J7n"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found existing installation: cvxpy 1.0.31\n",
-            "Uninstalling cvxpy-1.0.31:\n",
-            "  Would remove:\n",
-            "    /usr/local/lib/python3.7/dist-packages/_cvxcore.cpython-37m-x86_64-linux-gnu.so\n",
-            "    /usr/local/lib/python3.7/dist-packages/cvxpy-1.0.31.dist-info/*\n",
-            "    /usr/local/lib/python3.7/dist-packages/cvxpy/*\n",
-            "    /usr/local/lib/python3.7/dist-packages/examples/*\n",
-            "Proceed (y/n)? y\n",
-            "  Successfully uninstalled cvxpy-1.0.31\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting cvxpy\n",
-            "  Downloading cvxpy-1.2.1-cp37-cp37m-manylinux_2_24_x86_64.whl (2.8 MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.8 MB 5.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: scipy>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from cvxpy) (1.7.3)\n",
-            "Requirement already satisfied: scs>=1.1.6 in /usr/local/lib/python3.7/dist-packages (from cvxpy) (3.2.0)\n",
-            "Requirement already satisfied: osqp>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from cvxpy) (0.6.2.post0)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from cvxpy) (1.21.6)\n",
-            "Requirement already satisfied: ecos>=2 in /usr/local/lib/python3.7/dist-packages (from cvxpy) (2.0.10)\n",
-            "Requirement already satisfied: qdldl in /usr/local/lib/python3.7/dist-packages (from osqp>=0.4.1->cvxpy) (0.1.5.post2)\n",
-            "Installing collected packages: cvxpy\n",
-            "Successfully installed cvxpy-1.2.1\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting git+https://github.com/NUAA-AL/alipy.git\n",
-            "  Cloning https://github.com/NUAA-AL/alipy.git to /tmp/pip-req-build-_lt6do7v\n",
-            "  Running command git clone -q https://github.com/NUAA-AL/alipy.git /tmp/pip-req-build-_lt6do7v\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from alipy==1.2.5) (1.21.6)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from alipy==1.2.5) (1.7.3)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from alipy==1.2.5) (1.0.2)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from alipy==1.2.5) (3.2.2)\n",
-            "Requirement already satisfied: prettytable in /usr/local/lib/python3.7/dist-packages (from alipy==1.2.5) (3.3.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->alipy==1.2.5) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->alipy==1.2.5) (1.4.4)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->alipy==1.2.5) (3.0.9)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->alipy==1.2.5) (0.11.0)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.0.1->matplotlib->alipy==1.2.5) (4.1.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib->alipy==1.2.5) (1.15.0)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from prettytable->alipy==1.2.5) (4.12.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prettytable->alipy==1.2.5) (0.2.5)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->prettytable->alipy==1.2.5) (3.8.1)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->alipy==1.2.5) (1.1.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->alipy==1.2.5) (3.1.0)\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: hmeasure in /usr/local/lib/python3.7/dist-packages (0.1.6)\n",
-            "Requirement already satisfied: scipy>=1.2.1 in /usr/local/lib/python3.7/dist-packages (from hmeasure) (1.7.3)\n",
-            "Requirement already satisfied: scikit-learn>=0.21.1 in /usr/local/lib/python3.7/dist-packages (from hmeasure) (1.0.2)\n",
-            "Requirement already satisfied: numpy>=1.16.1 in /usr/local/lib/python3.7/dist-packages (from hmeasure) (1.21.6)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.21.1->hmeasure) (3.1.0)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.21.1->hmeasure) (1.1.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "### FOR RUNNING ON COLAB:\n",
         "!pip uninstall cvxpy\n",
@@ -205,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "9clhtuie-zY6"
       },
@@ -414,13 +354,11 @@
         "  # ---------------- MODEL INTERNAL COST\n",
         "  # excluding initial sample\n",
         "  # compute initial cost, subtract from total (since all models will incur this cost)\n",
-        "  #model_int_cost = total_int_cost - cost_dict['total_internal_cost'].loc[cost_dict['generation'] == 0] #subtract cost of initial gen\n",
         "  model_int_cost = total_int_cost - initial_cost\n",
         "  cost_dict['model_internal_cost'].loc[cost_dict['generation'] == gen] = model_int_cost\n",
         "\n",
         "  # ---------------- MODEL internal cost per loan (CPL)\n",
-        "  #not including initial starter sample, only cost incurred by model selections\n",
-        "\n",
+        "  #not including initial starter sample, only cost incurred by model selection\n",
         "  model_int_cpl = model_int_cost / (np.sum(total_int_conf_mat) - np.sum(initial_conf_mat))\n",
         "  cost_dict['model_internal_cpl'].loc[cost_dict['generation'] == gen] = model_int_cpl\n",
         "\n",
@@ -499,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "KvGBeAPboDIF"
       },
@@ -507,9 +445,9 @@
       "source": [
         "# loader function that unpacks tuning results and extracts parameters for different model steps\n",
         "\n",
-        "def param_getter(tuned=False, dataset=None):\n",
+        "def param_getter(tuned=True, dataset=None):\n",
         "  if tuned:\n",
-        "    filename = f'{dataset}_tuned-params'\n",
+        "    filename = f'/metaparameters/{dataset}_tuned-params'\n",
         "\n",
         "    with open(filename, 'r') as f:\n",
         "      param_list = [json.loads(line) for line in f if line.startswith('{')]\n",
@@ -570,10 +508,6 @@
         "\n",
         "def loop_param_setter(X, max_gens = 10, total_rounds=5, init_ratio = 0.1, AL_acc_rate = 0.5, weights=True, cost_mat = None, dataset = None):\n",
         "\n",
-        "  #max_gens = 10 per round (outer loop) this parameter sets the number of generations of applicants (inner loop)\n",
-        "  #total_rounds = 5 #number of loop iterations, important for Stratified Kfold splitting of data\n",
-        "  #init_ratio = 0.1\n",
-        "\n",
         "  init_size, sample_size  = split_sample_calc(X, init_ratio, total_rounds, max_gens)\n",
         "\n",
         "  LOOP_params = {'rounds': total_rounds,\n",
@@ -610,6 +544,7 @@
         "  #size of the initially labeled sample\n",
         "  #the term (len(X)-100) is used to leave some buffer so that the loop will be able to query a stratified sample in the last generation without issues due to a missing class.\n",
         "  #factor (1-1/total_rounds) is used because one of k folds is used as test set, therefore not being available for training.\n",
+        "  \n",
         "  available_data = int((len(X)-100) * (1-1/total_rounds))\n",
         "  print(\"available_data\", available_data)\n",
         "  s_initial = int(init_size*available_data)\n",
